--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <title>Linnupesa Eelkool</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
     <link rel="stylesheet" href="assets/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Pinyon+Script&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <header id="header">
@@ -39,14 +37,14 @@
                 </li>
                 <a class="navbar-brand" href="/">
                     <div class="logo-image">
-                          <img src="images/lind.png" class="img-fluid">
+                          <img src="images/lind2.png" class="img-fluid">
                           <h2>Huviringid</h2>
                     </div>
               </a>
                 <li>
                     <a class="navbar-brand" href="/">
                         <div class="logo-image">
-                              <img src="images/lind.png" class="img-fluid">
+                              <img src="images/lind2.png" class="img-fluid">
                               <h2>Töötoad</h2>
                         </div>
                   </a>                    
@@ -54,13 +52,12 @@
                 <li>
                     <a class="navbar-brand" href="/">
                         <div class="logo-image">
-                              <img src="images/lind.png" class="img-fluid">
+                              <img src="images/lind2.png" class="img-fluid">
                               <h2>Kontakt</h2>
                         </div>
                   </a>                    
                 </li>
-  
             </ul>
         </nav>
-    </header>
+</div>
 </body>
