better alignment for mobile view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header id="header">
     <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
     <h1>Linnupesa Eelkool</h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #a9f8fb !important">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #a9f8fb !important; display:block !important" >
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="navbar-brand" href="/">
